# zerotooth

./: .gitmodules  CMakeLists.txt  LICENSE  README  README.md  build-docker  run-docker
docker/: dev-env
src/: CMakeLists.txt  intkey-circuit-gl1.cpp  intkey-circuit-gl1.hpp  intkey-circuit-gl2.cpp  main.cpp  test-gadgetlib2.cpp
